<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_stack_exchange"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/loginDialog_etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/dialog_login_border_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="7dp" />

    <EditText
        android:id="@+id/loginDialog_etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/dialog_login_border_edit_text"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="7dp" />

    <TextView
        android:id="@+id/loginDialog_tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginBottom="20dp"
        android:text="@string/login"/>


</LinearLayout>