<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context=".ui.selectLogin.SelectLoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/auth_background">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/home_logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/auth_repeat_background">
        <ProgressBar
            android:id="@+id/authFrag_progressBar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:theme="@style/WhiteAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/authFrag_buttons"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/authFrag_buttonSignUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:background="@color/auth_button"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/sign_up"/>
            <Button
                android:id="@+id/authFrag_buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:background="@color/auth_button"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/login"/>
        </LinearLayout>

        <TextView
            android:id="@+id/authFrag_tvStart"
            android:layout_below="@+id/authFrag_buttons"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/auth_text"
            android:textStyle="bold"
            android:gravity="center_horizontal |center_vertical
"
            android:text="@string/start_using_with_an_account" />
    </RelativeLayout>
</LinearLayout>