<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/auth_background"
    tools:context=".ui.selectLogin.LoginFragment">
    <include
        android:id="@+id/loginFrag_actionBar"
        layout="@layout/action_bar"/>

    <ImageView
        android:layout_below="@+id/loginFrag_actionBar"
        android:id="@+id/loginFrag_logo"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/splash_screen_text"/>


   <ScrollView
       android:layout_below="@id/loginFrag_logo"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">


           <com.google.android.gms.common.SignInButton
               android:id="@+id/loginFrag_button_google"
               android:layout_width="200dp"
               android:layout_height="40dp"
               android:layout_marginTop="30dp"
               android:layout_centerHorizontal="true"
               android:layout_gravity="center_horizontal"/>

           <com.facebook.login.widget.LoginButton
               android:id="@+id/loginFrag_btnFacebook"
               android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:layout_below="@id/loginFrag_button_google"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="20dp"
              />

           <LinearLayout
               android:id="@+id/loginFrag_llStack"
               android:layout_below="@+id/loginFrag_btnFacebook"
               android:layout_width="match_parent"
               android:layout_height="45dp"
               android:orientation="horizontal"
               android:layout_marginTop="20dp"
               android:layout_marginStart="30dp"
               android:layout_marginEnd="30dp"
               android:background="@drawable/login_button">
               <ImageView
                   android:padding="5dp"
                   android:layout_width="60dp"
                   android:layout_height="wrap_content"
                   android:contentDescription="@string/logo"
                   android:src="@drawable/launcher"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:paddingStart="10dp"
                   android:paddingEnd="10dp"
                   android:gravity="center_vertical"
                   android:textStyle="bold"
                   android:textColor="@color/blue"
                   android:text="@string/log_in_using_stack_exchange"/>
           </LinearLayout>
           <LinearLayout
               android:id="@+id/loginFrag_openid"
               android:layout_below="@+id/loginFrag_llStack"
               android:layout_marginTop="20dp"
               android:layout_width="match_parent"
               android:layout_height="45dp"
               android:orientation="horizontal"
               android:layout_marginStart="30dp"
               android:layout_marginEnd="30dp"
               android:background="@drawable/login_button">
               <ImageView
                   android:padding="10dp"
                   android:layout_width="60dp"
                   android:layout_height="wrap_content"
                   android:contentDescription="@string/logo"
                   android:src="@drawable/openid"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:paddingStart="10dp"
                   android:paddingEnd="10dp"
                   android:gravity="center_vertical"
                   android:textStyle="bold"
                   android:textColor="@color/blue"
                   android:text="@string/log_in_using_another_openid"/>
           </LinearLayout>
            <TextView
                android:id="@+id/loginFrag_tvTest"
                android:layout_below="@+id/loginFrag_openid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
       </RelativeLayout>
   </ScrollView>
</RelativeLayout>