<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.home.detailScreen.DetailScreenFragment">

    <include layout="@layout/action_bar_detail"/>
    <!--    title-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:weightSum="8">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/background_detail_top"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/detailFrag_ivUpVote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/up_arrow"/>
                    <TextView
                        android:id="@+id/detailFrag_tvPoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:text=""/>
                    <ImageView
                        android:id="@+id/detailFrag_ivDownVote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/down_arrow"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:background="@drawable/background_detail_top"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/detailFrag_tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:lineSpacingExtra="3dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/blue"
                        />
                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/detailFrag_flexTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:lineSpacingExtra="3dp"
                        android:paddingBottom="5dp"
                        app:flexWrap="wrap"
                        app:alignContent="center"
                        app:flexDirection="row">

                    </com.google.android.flexbox.FlexboxLayout>
                </LinearLayout>
            </LinearLayout>
            <!--    webview-->
            <WebView
                android:id="@+id/detailFrag_webView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color"/>
            <!--    button-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <TextView
                    android:id="@+id/detailFrag_tvFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/detailFrag_tvShare"
                    android:text="@string/favorite"
                    android:textAlignment="gravity"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableStart="@drawable/ic_favorite"/>
                <TextView
                    android:id="@+id/detailFrag_tvShare"
                    android:layout_toStartOf="@id/detailFrag_tvMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableStart="@drawable/ic_share"/>
                <TextView
                    android:id="@+id/detailFrag_tvMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/more"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:drawableStart="@drawable/ic_more"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <ImageView
                    android:id="@+id/detailFrag_ivAvatar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/logo"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_avatar"/>
                <LinearLayout
                    android:id="@+id/detailFrag_llUser"
                    android:layout_toEndOf="@+id/detailFrag_ivAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/detailFrag_tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_light"
                        android:text=""/>

                    <TextView
                        android:id="@+id/detailFrag_tvUserPoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="10sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/detailFrag_llTime"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/detailFrag_tvEdited"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="Asked"/>
                    <TextView
                        android:id="@+id/detailFrag_tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text=""/>
                </LinearLayout>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>